# c_skeleton

./: .gitignore  CMakeLists.txt  _arm_make_cmd  _build_cmd  _clean_cmd  _distclean_cmd  _install_cmd  am335x_arm_none_linux_gnuabi.cmake  arm_s5pv210-linaro.cmake  s5pv210_arm_linux_gnueabi.cmake  skeleton_main.c
cmake/: log.ini.in  log_defaults.cmake  log_defaults_dev.cmake  log_defaults_prod.cmake
example/mgr/: mgr_bus_main.c
example/ui/: ncui_ui_main.c
inc/engine/cfg/: cfg_engine.h  cfg_engine_priv.h  cfg_repo.h
inc/engine/gio/: gio_engine.h  gio_engine_priv.h
inc/engine/logic/: logic_engine.h  logic_engine_priv.h  logic_output_map.h  logic_output_map_priv.h
inc/engine/red/: red_engine.h  red_engine_priv.h
inc/engine/sys/: sys_engine.h  sys_engine_priv.h
inc/mgr/cfg/: cfg_mgr.h  cfg_mgr_priv.h  cfg_repo.h
inc/mgr/contract/: mgr_addrs.h  mgr_events.h  mgr_health.h  mgr_msg_codes.h
inc/mgr/gio/: gio_ipc_sem.h  gio_ipc_shm.h  gio_mgr.h  gio_mgr_priv.h
inc/mgr/logic/: logic_mgr.h  logic_mgr_priv.h
inc/mgr/red/: red_mgr.h  red_mgr_priv.h  red_policy.h
inc/mgr/sys/: sys_mgr.h  sys_mgr_priv.h
inc/mgr/ui/: ui_mgr.h  ui_mgr_bootstrap.h  ui_mgr_priv.h  ui_notify_proto.h  ui_proto.h  ui_snapshot_mgr.h
inc/ra/cfg/: cfg_request_ra.h  cfg_request_ra_priv.h  cfg_result_ra.h  cfg_result_ra_priv.h  cfg_shm_ra.h
inc/ra/gio/: gio_ipc_sem.h  gio_ipc_shm.h  gio_shm_owner_ra.h  gio_shm_ra.h  gio_shm_ra_priv.h
inc/ra/logic/: logic_cfg_ra.h  logic_cfg_ra_priv.h
inc/ra/red/: red_shm_ra.h
inc/ra/ui/: ra_ui_shm.h  ra_ui_uds.h
inc/resource/cfg/: cfg_request_dto.h  cfg_result_dto.h  cfg_shm_layout.h
inc/resource/cfg/dto/: cfg_export_dto.h  cfg_request_dto.h
inc/resource/gio/: gio_shm_layout.h  gio_snapshot_dto.h
inc/resource/logic/: logic_cfg_dto.h
inc/resource/red/: red_shm_layout.h  red_state_dto.h
inc/ui/: ui_snapshot_shm.h
inc/util/: ini.h
inc/util/dispatch/: dispatch.h  dispatch_observer_if.h  dispatch_policy.h  dispatch_types.h
inc/util/fsm/: fsm.h  fsm_decl.h  fsm_observer_adapter.h  fsm_observer_if.h  fsm_types.h
inc/util/ipc/: shm_common.h  shm_dbuf.h  shm_layout.h  system_shm_layout.h
inc/util/log/: log_bootstrap.h  log_cfg_adapter.h  log_cfg_dto.h  log_level.h  log_system.h  log_ui_sender.h  log_util.h
inc/util/log/internal/: log_core.h  log_policy.h  log_sink.h  log_sink_file.h  log_sink_udp.h  log_sink_ui.h  log_types.h
inc/util/mgr_bus/: mgr_bus.h
inc/util/obs/: dispatch_observer_obs.h  fsm_observer_obs.h  obs.h  obs_sink_log.h  obs_types.h
include/: def_debug.h  def_types.h  skeleton_const.h  skeleton_version.h
src/engine/cfg/: cfg_engine.c  cfg_repo.c
src/engine/gio/: gio_engine.c
src/engine/logic/: logic_engine.c  logic_output_map.c
src/engine/red/: red_engine.c
src/engine/sys/: sys_engine.c
src/mgr/cfg/: cfg_bootstrap.c  cfg_mgr.c  cfg_mgr_runloop.c  cfg_repo.c
src/mgr/gio/: gio_bootstrap.c  gio_ipc_sem.c  gio_ipc_shm.c  gio_mgr.c  gio_mgr_runloop.c
src/mgr/logic/: logic_bootstrap.c  logic_mgr.c  logic_mgr_runloop.c
src/mgr/red/: red_bootstrap.c  red_mgr.c  red_mgr_runloop.c  red_policy.c
src/mgr/sys/: sys_bootstrap.c  sys_mgr.c  sys_mgr_runloop.c
src/mgr/ui/: ui_bootstrap.c  ui_log_adapter.c  ui_mgr.c  ui_mgr_runloop.c  ui_proto.c  ui_snapshot_mgr.c
src/ra/cfg/: cfg_request_ra.c  cfg_result_ra.c  cfg_shm_ra.c
src/ra/gio/: gio_ipc_sem.c  gio_ipc_shm.c  gio_shm_owner_ra.c  gio_shm_ra.c
src/ra/logic/: logic_cfg_dto.c
src/ra/red/: red_shm_ra.c
src/ra/ui/: ra_ui_shm.c  ra_ui_uds.c
src/util/: ini.c
src/util/dispatch/: dispatch.c
src/util/fsm/: fsm.c  fsm_observer_adapter.c
src/util/ipc/: shm_common.c  shm_dbuf.c
src/util/log/: log_bootstrap.c  log_cfg_adapter.c  log_system.c
src/util/log/internal/: log_core.c  log_policy.c  log_sink.c  log_sink_file.c  log_sink_udp.c  log_sink_ui.c
src/util/mgr_bus/: mgr_bus.c
src/util/obs/: dispatch_observer_obs.c  fsm_observer_obs.c  obs.c  obs_sink_log.c
